# simple_mujoco_ros2_practice

./: README.md  flake.nix
assets/model/: double_pendulum.xml  scene.xml
cmake/: ProjectConfig.cmake
common/include/motion/: TrajectoryGenerator.hpp
common/include/robot/: DoublePendulumModel.hpp
common/include/utilities/: eigen_types.hpp
common/src/motion/: TrajectoryGenerator.cpp
common/src/robot/: DoublePendulumModel.cpp
simple_mujoco_controller/: CMakeLists.txt  package.xml
simple_mujoco_controller/include/simple_mujoco_controller/: simple_mujoco_controller.hpp
simple_mujoco_controller/src/: simple_mujoco_controller.cpp  simple_mujoco_controller_node.cpp
simple_mujoco_gui_plugin/: CMakeLists.txt  default.nix  package.xml  plugin.xml  setup.py
simple_mujoco_gui_plugin/include/simple_mujoco_gui_plugin/: simple_mujoco_gui_plugin.hpp
simple_mujoco_gui_plugin/resource/: resources.qrc  simple_mujoco_gui_plugin.ui
simple_mujoco_gui_plugin/scripts/: simple_mujoco_gui_plugin
simple_mujoco_gui_plugin/src/simple_mujoco_gui_plugin/: simple_mujoco_gui_plugin.cpp
simple_mujoco_ros2_interface/: CMakeLists.txt  package.xml
simple_mujoco_ros2_interface/include/: lodepng.h
simple_mujoco_ros2_interface/include/simple_mujoco_ros2_interface/: simple_mujoco_ros2_interface.hpp
simple_mujoco_ros2_interface/src/: lodepng.cpp  main.cc  simple_mujoco_ros2_interface.cpp  simulate.cc
simple_mujoco_ros2_interface/src/simple_mujoco_ros2_interface/: simple_mujoco_ros2_interface.cpp  simple_mujoco_ros2_interface_node.cpp
