<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>simple_mujoco_gui_plugin</name>
  <version>0.0.0</version>
  <description>
    This package is a RQt GUI plugin for MuJoCo UI Interaction.
  </description>
  <maintainer email="jwhong1209@gmail.com">jwhong1209</maintainer>
  <author>Jeongwoo Hong</author>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>qt_gui_cpp</depend>
  <depend>rqt_gui_cpp</depend>

  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
