<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>simple_mujoco_ros2_interface</name>
  <version>0.0.0</version>
  <description>Simple Mujoco ROS2 Interface</description>
  <maintainer email="jwhong1209@gmail.com">Jeongwoo Hong</maintainer>
  <license>TODO</license>
  <author email="jwhong1209@gmail.com">Jeongwoo Hong</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
